Adicionado funcionalidades na pagina do sobre e uma nova função de jogar jogo da velha, ja que o firebase acabou não funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicativoConversa">
         <activity
+            android:name=".JogoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".IgorActivity"
+            android:exported="false" />
+        <activity
             android:name=".EderActivity"
             android:exported="false" />
         <activity
