mostrar nome jogadores

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicativoConversa">
         <activity
+            android:name=".JogadoresActivity"
+            android:exported="false" />
+        <activity
             android:name=".JogoActivity"
             android:exported="false" />
         <activity
